--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -111,3 +111,16 @@ ul li {list-style-type:none;}
 	&:hover .info{opacity: 0.7;}
 	img.responsive{width: 100%;}
 }
+
+.contentInner .no_transList{
+	padding: 16px 14px;
+    background-color: #f9f9f9;
+    border: 1px solid #e2e2e2;
+    margin-bottom: 10px;
+}
+
+.favorInfoList{
+	li{border-bottom: 1px solid #e6e4e4;padding-bottom: 14px;padding-top: 14px;}
+	.detailTitle{color: #333;margin-bottom: 8px;font-size: 18px;display: inline-block;}
+
+}
