--- a/src/pages/user/templates/appointment.ejs
+++ b/src/pages/user/templates/appointment.ejs
@@ -20,7 +20,7 @@
 					<span class="btn btn-tray">已关闭</span>
 				<% } %>
 			<% }else if(appointments[i].status == 4) { %>
-				<span class="btn btn-green">代付款</span>
+				<span class="btn btn-green">待付款</span>
 			<% }else if(appointments[i].status == 5) { %>
 				<span class="btn btn-gray">已取消</span>
 			<% } %>
