分数线对比结果

--- a/src/pages/scoreLineResult/index.less
+++ b/src/pages/scoreLineResult/index.less
@@ -30,3 +30,8 @@
 
 .error .p-error {display: none;}
 .errorIpt.unvalid .p-error {display: inline-block;}
+
+#charts{height: 320px;margin-bottom: 24px;}
+.scoreLineTxt{line-height: 1.8;margin-top: 20px;color:#333;}
+
+.chartTitle{font-size: 18px;margin-bottom: 16px;color: #333;font-weight: normal;}
