--- a/src/pages/subject/templates/school.ejs
+++ b/src/pages/subject/templates/school.ejs
@@ -23,7 +23,7 @@
 	</div>
 	</div>
 	<div class="fr">
-		<a href="javascript:;" class="btn btn-primary btn-mid favMajorBtn"><%= colleges[i].majorCount %>个专业</a>
+		<a href="javascript:;" class="btn btn-primary btn-mid favMajorBtn" collegeid=<%= colleges[i].collegeId %> ><%= colleges[i].majorCount %>个专业</a>
 	</div>
 </li>
 <% }} %>
