海外院校库

--- a/src/pages/aboardSuccess/index.less
+++ b/src/pages/aboardSuccess/index.less
@@ -16,7 +16,7 @@
 	.index{display: inline-block;font-size: 24px;width:44px;height: 44px;line-height:44px;text-align: center;color:#fff;background-color: #e2e2e2;margin-right: 15px;}
 	.detail{
 		 font-size: 14px;color: #555;line-height: 1.5;
-		.field{display: inline-block;margin-right: 20px;min-width: 108px;width: auto;cursor: default;}
+		.field{display: inline-block;margin-right: 20px;margin-bottom:10px;min-width: 108px;width: auto;cursor: default;}
 		.field:last-child{margin-right:0;}
 	}
 }
