--- a/src/pages/collegeDetail/index.less
+++ b/src/pages/collegeDetail/index.less
@@ -71,3 +71,5 @@
 .icon-hat{background-position: -72px 0;}
 
 .next{width:18px;height: 32px;background-position: 0 -35px;}
+
+.threholdTableWrap{min-height:400px; }
