--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -76,6 +76,7 @@ ul li {list-style-type:none;}
 .infoList .btn-negative{padding-top:2px;padding-bottom: 2px;}
 .infoList .detailCnt{margin-top: 24px;}
 
+
 .q-school{
 	margin-bottom: 24px;
 	h3{font-size: 16px;margin-bottom: 16px;}
@@ -121,7 +122,11 @@ ul li {list-style-type:none;}
 }
 
 .favorInfoList{
-	li{border-bottom: 1px solid #e6e4e4;padding-bottom: 14px;padding-top: 14px;}
+	li{border-bottom: 1px solid #e6e4e4;padding-bottom: 14px;padding-top: 14px;
+		.imgWrap{
+			display: inline-block;width: 130px;height: 130px;margin-right: 10px;
+		}
+	}
 	.detailTitle{color: #333;margin-bottom: 8px;font-size: 18px;display: inline-block;}
 }
 
