我的资料更新

--- a/src/assets/templates/applyInfo.ejs
+++ b/src/assets/templates/applyInfo.ejs
@@ -8,7 +8,7 @@
     <em class="vm">高考所在地：</em></label>
   <div class="col2 selectWrap rel">
     <div class="fieldWrap lh34">
-      <span><%= province %></span>
+      <span><%= provinceName %></span>
     </div>
   </div>
 </div>
