--- a/src/pages/score/templates/recommend.ejs
+++ b/src/pages/score/templates/recommend.ejs
@@ -5,5 +5,5 @@
 	</span>
 </p>
 <div class="btnRow">
-	<a href="/library/major" class="btn btn-primary" target="_blank">查查看，能选什么专业</a>
+	<a href="/library/subject" class="btn btn-primary" target="_blank">查查看，能选什么专业</a>
 </div>
