--- a/src/pages/aboardData/templates/school.ejs
+++ b/src/pages/aboardData/templates/school.ejs
@@ -15,7 +15,7 @@
 		<span class="label">在该国排名：</span><span class="field">NO.<%= data[i].traffic_rank %></span>
 	</div>
 	<div class="detail row">
-		<span class="label">著名校友：</span><span class="field">NO.<%= data[i].fame_alumnus %></span>
+		<span class="label">著名校友：</span><span class="field"><%= data[i].fame_alumnus %></span>
 	</div>
 	<div class="detail row media">
 		<span class="label fl">地理环境优势：</span>
