--- a/src/pages/collegeDetail/index.less
+++ b/src/pages/collegeDetail/index.less
@@ -24,6 +24,7 @@
 	.col{
 		float:left;width:33.3%;margin-bottom: 14px;font-size:14px;line-height: 18px;height: 18px;
 		&.c-6{width: 60%;}
+		&.c-8{width: 80%;}
 	}
 
 }
