--- a/src/pages/collegeDetail/index.less
+++ b/src/pages/collegeDetail/index.less
@@ -73,4 +73,4 @@
 
 .next{width:18px;height: 32px;background-position: 0 -35px;}
 
-.threholdTableWrap{min-height:400px; }
+.threholdTableWrap{height:400px; }
