--- a/src/pages/collegeDetail/templates/major.ejs
+++ b/src/pages/collegeDetail/templates/major.ejs
@@ -15,7 +15,7 @@
 			<span>
 				<i class="icon-major icon-score"></i>
 				<em class="label">分数线：</em>
-				<em class="field orange"><%= majors[i].majorName %></em>
+				<em class="field orange"><%= majors[i].threshold %></em>
 			</span>
 			<span>
 				<i class="icon-major icon-term"></i>
