--- a/src/pages/subject/templates/favList.ejs
+++ b/src/pages/subject/templates/favList.ejs
@@ -6,9 +6,12 @@
 	  	</a>
   	</span>
   	<div class="col2 fl">
+      <% if (subMajors[i].subjects.length == 0) { %>
+        <span class="btn btn-default">不限</span>
+      <% }else{ %>
   		<% for (var k = 0; k < subMajors[i].subjects.length; k++) { %>
   		<span class="btn btn-default"><%= subMajors[i].subjects[k].subjectName %></span>
-  		<% } %>
+  		<% }} %>
   	</div>
   </div>
 <% } %>
