--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -63,7 +63,7 @@ ul li {list-style-type:none;}
 .majorList .bs{font-size: 16px;color: #333;line-height: 36px;padding-left: 10px;}
 .bg-gf{background-color: #f1f1f1;}
 .majorList .btnsRow{margin-top: 20px;
-	.btn{width:110px;font-size: 14px;border-radius: 0;margin-right: 20px;}
+	.btn{width:110px;font-size: 14px;border-radius: 0;margin-right: 20px;margin-bottom: 10px;}
 }
 
 .infoList li{margin-bottom: 20px;border-bottom:1px solid #e2e2e2;padding-bottom: 20px;}
