--- a/src/pages/user/templates/favNews.ejs
+++ b/src/pages/user/templates/favNews.ejs
@@ -5,7 +5,7 @@
 <li>
    	 <div class="media">
 		<span class="fl imgWrap">
-			<img src="<%= favorites[i].news.newsIconUrl %>">
+			<img src="<%= favorites[i].news.newsIconUrl %>" class="responsive">
 		</span>
 		<div class="media-body">
 				<a class="detailTitle ellipsis" href="<%= favorites[i].news.newsUrl %>" target="_blank">
