--- a/src/pages/collegeFaqDetail/templates/list.ejs
+++ b/src/pages/collegeFaqDetail/templates/list.ejs
@@ -1,4 +1,4 @@
-<% if (questions.length == 0) { %>
+<% if (questions.length == 0 && page == 1) { %>
 	<li class="no_transList"><i class="noListIcon"></i><em class="vm">暂无记录</em></li>
 <% }else{ %>
 <% for (var i = 0; i < questions.length; i++) { %>
