--- a/src/pages/evaluateStep2/templates/schoolList.ejs
+++ b/src/pages/evaluateStep2/templates/schoolList.ejs
@@ -1,4 +1,4 @@
- <% if (colleges.length == 0) { %>
+ <% if (colleges.length == 0 && page == 1) { %>
 	<li class="no_transList"><i class="noListIcon"></i><em class="vm">暂时搜索不到数据</em></li>
 <% }else{ %>
 	<% for (var i = 0; i < colleges.length; i++) { %>
