--- a/src/pages/user/templates/appointment.ejs
+++ b/src/pages/user/templates/appointment.ejs
@@ -31,9 +31,9 @@
 				<span><%= appointments[i].param.cityName %></span><span><%= appointments[i].param.mobile %></span>
 				<span><%= appointments[i].param.courseTypeName %></span><span><%= appointments[i].param.score %></span>
 				<% if(appointments[i].appointmentType == 0) { %>
-					<span>专家面对面服务</span>
+					<span>线上服务</span>
 				<% }else if(appointments[i].appointmentType == 1) { %>
-					<span>专家在线服务</span>
+					<span>面对面服务</span>
 				<% } %>
 			</p>
 			<p>
