高考志愿评估文案错误

--- a/src/pages/aboardData/templates/school.ejs
+++ b/src/pages/aboardData/templates/school.ejs
@@ -8,7 +8,7 @@
 	</h4>
 	<div class="detail row">
 		<span class="label">所在地区：</span><span class="field"><%= data[i].country %>&nbsp;<%= data[i].city %></span>
-		<span class="label">成立年份：</span><span class="field"><%= data[i].build_year %></span>
+		<span class="label">成立年份：</span><span class="field"><%= data[i].builder_year %></span>
 		<span class="label">院校性质：</span><span class="field"><%= data[i].school_type %></span>
 	</div>
 	<div class="detail row">
