--- a/src/pages/bookStep3/templates/majorList.ejs
+++ b/src/pages/bookStep3/templates/majorList.ejs
@@ -7,7 +7,7 @@
 		 if(subs[0].subs[i].status == 1) {
 			checkedStatus = "checked";
 		 }else{
-			checkedStatus = "123";
+			checkedStatus = "";
 		 } %>
 	<label class="label_check" for="majorType<%= subs[0].id %>_<%= subs[0].subs[i].id %>">
 		<em class="icon-eye" data-supType=<%= subs[0].id %> data-majorId=<%= subs[0].subs[i].id %> data-name="<%= subs[0].subs[i].name %>" ></em>
