--- a/src/pages/pay/book/index.less
+++ b/src/pages/pay/book/index.less
@@ -15,3 +15,8 @@ pre{display: none;}
 
 .formWrap .footerCnt{margin-top: 20px;border-top: none;}
 .demoImg{margin-top: 44px;text-align: center;}
+
+.btn-sample{
+	width:322px;position:absolute;display:inline-block;font-size: 20px;color: #fff;line-height: 40px;text-align: center;bottom:-20px;left:50%;margin-left: -161px;background-color: #525252;padding:0;border:none;transtion:0.4s all ease;
+	&:hover{background-color:#707070; }
+}
