--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -109,8 +109,7 @@ ul li {list-style-type:none;}
 
 .avatarWrap .thumbnail{
 	width: 84px;height: 84px;border:1px solid #dadada;cursor: pointer;
-	.info{position: absolute;font-size: 12px;line-height: 24px;bottom:0;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
-	&:hover .info{opacity: 0.7;}
+	.info{position: absolute;height:34px;bottom:0;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
 	img.responsive{width: 100%;}
 }
 
