--- a/src/pages/collegeFaqDetail/index.less
+++ b/src/pages/collegeFaqDetail/index.less
@@ -34,3 +34,5 @@
 .qschoolList h3{font-size: 18px;line-height: 32px;font-weight: normal;margin-bottom: 24px;
 	.btn{padding-top: 5px;padding-bottom: 5px;}
 }
+
+.applyQ{display: none;}
