--- a/src/pages/major/templates/major_all.ejs
+++ b/src/pages/major/templates/major_all.ejs
@@ -1,4 +1,4 @@
-<% if (majors.length == 0 && page == 1) { %>
+<% if (majors.length == 0) { %>
 	<li class="no_transList"><i class="noListIcon"></i><em class="vm">暂无记录</em></li>
 <% }else{ %>	
 <% for (var i = 0; i < majors.length; i++) { %>
