--- a/src/pages/subject/index.less
+++ b/src/pages/subject/index.less
@@ -45,8 +45,8 @@
 .favMajorModal{
 	.majorListWrap{padding-top: 16px;padding-left: 12px;}
 	.row{line-height: 30px;margin-bottom: 16px;}
-	.col1{display: inline-block;width: 100px;font-size: 15px;
-		a{color: #444;}
+	.col1{display: inline-block;width: 120px;font-size: 15px;
+		a{color: #444; max-height: 30px;overflow: hidden;display: inline-block;line-height: 1;}
 	}
 	.col2{display: block;width: auto;
 		.btn{font-size: 13px;padding-top: 0;padding-bottom: 0;line-height: 28px;margin-right: 10px;}
