--- a/src/pages/subject/templates/favList.ejs
+++ b/src/pages/subject/templates/favList.ejs
@@ -1,7 +1,7 @@
 <% for (var i = 0; i < subMajors.length; i++) { %>
   <div class="row clearfix"> 
   	<span class="col1 fl">
-	  	<a target="_blank" href="/library/major/<%= subMajors[i].majorId %>" >
+	  	<a target="_blank" href="/library/major/<%= subMajors[i].majorId %>" title="<%= subMajors[i].majorName %>">
 	  		<%= subMajors[i].majorName %>:
 	  	</a>
   	</span>
