--- a/src/pages/user/templates/appointment.ejs
+++ b/src/pages/user/templates/appointment.ejs
@@ -37,7 +37,7 @@
 				<% } %>
 			</p>
 			<p>
-				<%= appointments[i].scheduleTime %>
+				<%= appointments[i].content %>
 			</p>
 		</div>
 	</div>
