--- a/src/pages/evaluateStep2/index.less
+++ b/src/pages/evaluateStep2/index.less
@@ -61,7 +61,7 @@
 	.city.disabled{background-color: #fff;}
 	.city label{cursor: pointer;display: block;}
 	.city label em,.city label input{vertical-align: middle;}
-	.city label em{display: inline-block;margin-left: 4px;}
+	.city label em{display: inline-block;margin-left: 4px;max-width: 120px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;}
 
 	.tagList{float: none;margin-bottom: 16px;background-color: #f3f3f3;}
 }
