--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -123,9 +123,9 @@
 .s-carousel{margin-top: 25px;margin-bottom: 25px;}
 .collegeWrap{position: relative;height: 78px;}
 .collegeList{
-	margin-left: 0;
+	margin-left: 0;display: none;
 	li{
-	float:left;margin-right: 12px;width:155px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
+	float:left;margin-right: 12px;width:154px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
 	a{display: block;width: 140px;height: 60px;text-align: center;}
 	img{max-width: 100%;max-height: 100%;}
 }
