--- a/src/assets/components/updateBrowser/index.less
+++ b/src/assets/components/updateBrowser/index.less
@@ -8,5 +8,6 @@
 }
 
 .browser_nav_room .nav_close{
-	display: inline-block;width: 19px;height: 19px;overflow: hidden;font:0/0 a;background: url(./img/browserClose.png);margin-top: 15px;
+	position: absolute;top: 15px;right:0;
+	display: inline-block;width: 19px;height: 19px;overflow: hidden;font:0/0 a;background: url(./img/browserClose.png);
 }
