--- a/src/assets/less/sidebar.less
+++ b/src/assets/less/sidebar.less
@@ -1,6 +1,6 @@
 // 导航条
 .m-aside{
-	position: fixed;left:50%;margin-left: 540px;bottom:180px;
+	position: fixed;left:50%;margin-left: 540px;bottom:180px;z-index: 10;
 	.btn-aside{
 		font-size: 14px;background:#fff;color:#9c9c9c;line-height: 26px;border:1px solid #d1d1d1;display: block;width:54px;height: 64px;text-align: center;padding:0 10px; margin-top: -1px;
 		em{display: inline-block;width:99%;}
