--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -163,7 +163,7 @@ html,body{background-color: @color-body;}
 	a:hover,.ellipsis:hover{background-color: @color-blue;color: #fff;}
 }
 
-.pagination a,.pagination span {display: inline-block;width: 22px;border: 1px solid @color-blue;font-size: 14px;margin-right: 10px;background-color: #fff;text-align: center;}
+.pagination a,.pagination span {display: inline-block;min-width: 22px;border: 1px solid @color-blue;font-size: 14px;margin-right: 10px;background-color: #fff;text-align: center;}
 
 /* 我的信息弹窗 */
 .myInfoModal{
