--- a/src/assets/less/mod/header.less
+++ b/src/assets/less/mod/header.less
@@ -69,7 +69,7 @@
 
 .down-app-wrapper{width:148px;height: 148px;text-align: center;line-height: 148px;border:1px solid #e2e2e2;background-color: #fff;position: relative;padding:0;}
 .header{
-	.navLists .down-app-options{overflow: visible;left:-14px;background-color: #fff;}
+	.navLists .down-app-options{overflow: visible;left:-14px;background-color: #fff;width:148px\9;}
 	.navLists .gzh-app-options{left:-23px;}
 	.navLists .down-app-options .down-app-wrapper{padding:0;}
 	.navLists .down-app-options .down-app-wrapper.current{background-color: #fff;}
