ie bug fix list

--- a/src/pages/aboardData/index.less
+++ b/src/pages/aboardData/index.less
@@ -21,7 +21,7 @@
 	.field:last-child{margin-right:0;}
 }
 .schoolList .btn{margin-top: 6px;}
-.schoolListWrap{border-top:1px solid #e2e2e2;margin-top: 24px;}
+.schoolListWrap{border-top:1px solid #e2e2e2;margin-top: 24px; min-height: 400px;}
 
 .schoolList{
 	h4{font-weight: normal;color: #666;margin-bottom: 18px;}
