--- a/src/pages/major_2/index.less
+++ b/src/pages/major_2/index.less
@@ -25,14 +25,13 @@
 .badgeRow{margin-bottom: 10px;}
 .badgeRow .badgetitle{display: inline-block;color:#333;font-size:18px;margin-right: 8px;}
 
-.schoolList li{padding:16px 0;border-bottom:1px solid #e2e2e2;margin-bottom: 10px;}
+.schoolList li{padding:16px 0;border-bottom:1px solid #e2e2e2;margin-bottom: 10px;background-color: transparent;}
 .schoolList .detail{
 	font-size: 14px;color: #555;line-height: 1.5;
 	.field{display: inline-block;margin-right: 16px;color:@color-orange;}
 	.field:last-child{margin-right:0;}
 }
 .schoolList .btn{margin-top: 6px;}
-.schoolListWrap{margin-top: 24px;}
 
 
 .detailInfos{
