--- a/src/pages/collegeFaq/index.less
+++ b/src/pages/collegeFaq/index.less
@@ -14,7 +14,7 @@
 
 .list-group-item{
 	color:#555;font-size: 15px;line-height: 23px;cursor: default;
-	.body{display: block;margin-left: 232px;}
+	.body{display: block;margin-right: 23px;}
 	&.cp{cursor: pointer;}
 }
 
