--- a/src/pages/user/templates/appointment.ejs
+++ b/src/pages/user/templates/appointment.ejs
@@ -23,6 +23,8 @@
 				<span class="btn btn-orange">待付款</span>
 			<% }else if(appointments[i].status == 5) { %>
 				<span class="btn btn-gray">已取消</span>
+			<% }else if(appointments[i].status == 6) { %>
+				<span class="btn btn-gray">已退款</span>
 			<% } %>
 		</div>
 		<div class="media-body g3 well_body">
