--- a/src/pages/bookStep3/templates/majorList.ejs
+++ b/src/pages/bookStep3/templates/majorList.ejs
@@ -30,7 +30,7 @@
 		 }else{ 
 			checkedStatus = ""; 
 		 } %>
-	<label class="label_check">
+	<label class="label_check" for="majorType<%= subs[1].id %>_<%= subs[1].subs[m].id %>">
 		<em class="icon-eye" data-supType=<%= subs[1].id %> data-majorId=<%= subs[1].subs[m].id %> data-name="<%= subs[1].subs[m].name %>" ></em>
 		<input type="checkbox" class="input form-control" id="majorType<%= subs[1].id %>_<%= subs[1].subs[m].id %>" name="majorType" <%= checkedStatus %> required>
 		<em class="vm"><%= subs[1].subs[m].name %></em>
