--- a/src/pages/bookResult/index.less
+++ b/src/pages/bookResult/index.less
@@ -19,7 +19,7 @@
 		.field{display: inline-block;margin-right: 20px;color:@color-orange;}
 		.field:last-child{margin-right:0;}
 	}
-	.tableWrap{margin-top: 14px;width: 500px;
+	.tableWrap{margin-top: 14px;min-width: 500px;max-width: 800px;
 		.table{
 			margin-bottom: 0;
 			td{color: #555;}
