--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -5,7 +5,7 @@
 ul li {list-style-type:none;}
 .mainContainer{margin-bottom: 36px;}
 .m-sideNav{background-color: #ddd;padding-top: 20px;}
-.avatarWrap .imgWrap{display:inline-block;border:1px solid #b7b7b7;}
+.avatarWrap .imgWrap{display:inline-block;width: 148px;height: 148px;}
 .userInfoList{margin-top: 20px;font-size: 16px;overflow: hidden;
 	a{color: #fff;display: block;}
 }
@@ -109,7 +109,7 @@ ul li {list-style-type:none;}
 
 .avatarWrap .thumbnail{
 	width: 84px;height: 84px;border:1px solid #dadada;cursor: pointer;
-	.info{position: absolute;height:34px;bottom:0;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
+	.info{position: absolute;height:34px;bottom:-34px;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
 	img.responsive{width: 100%;}
 }
 
@@ -141,3 +141,6 @@ ul li {list-style-type:none;}
 }
 
 #sSchoolForm .schoolLists{height: 310px\9;}
+
+.avatarRow{margin-bottom: 28px;}
+
