--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -5,7 +5,9 @@
 ul li {list-style-type:none;}
 .mainContainer{margin-bottom: 36px;}
 .m-sideNav{background-color: #ddd;padding-top: 20px;}
-.avatarWrap .imgWrap{display:inline-block;width: 148px;height: 148px;}
+.avatarWrap .imgWrap{display:inline-block;width: 148px;height: 148px;
+	img{width: 100%;height: 100%;}
+}
 .userInfoList{margin-top: 20px;font-size: 16px;overflow: hidden;
 	a{color: #fff;display: block;}
 }
@@ -110,7 +112,7 @@ ul li {list-style-type:none;}
 .avatarWrap .thumbnail{
 	width: 84px;height: 84px;border:1px solid #dadada;cursor: pointer;
 	.info{position: absolute;height:21px;bottom:0px;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
-	img.responsive{width: 100%;}
+	img.responsive{width: 100%;height:100%;}
 }
 
 .contentInner .no_transList{
