--- a/src/pages/major/index.less
+++ b/src/pages/major/index.less
@@ -24,4 +24,4 @@
 	.majorBtnRow .btn{font-size: 13px;min-width:108px;padding: 5px 10px;width:auto;margin-right: 20px;margin-bottom:10px;border-radius: 0;}
 }
 
-.subMajorList{float: left;margin-top: 34px;}
+.subMajorList{float: left;}
