--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -27,6 +27,7 @@ html,body{background-color: @color-body;}
 .c-7{width: 70%;}
 .c-8{width: 80%;}
 .c-9{width: 90%;}
+.c-10{width: 100%;}
 .c-33{width:33.3%} .c-66{width: 66.6%;} .c-32{width:32%} .c-68{width: 68%;}
 
 .lh34{line-height: 34px;}
