--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -112,7 +112,7 @@ ul li {list-style-type:none;}
 
 .avatarWrap .thumbnail{
 	width: 84px;height: 84px;border:1px solid #dadada;cursor: pointer;
-	.info{position: absolute;height:21px;bottom:0px;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
+	.info{position: absolute;height:24px;bottom:0px;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
 	img.responsive{width: 100%;height:100%;}
 }
 
@@ -147,3 +147,33 @@ ul li {list-style-type:none;}
 
 .avatarRow{margin-bottom: 20px;}
 
+.webuploader-container {
+	position: relative;
+}
+.webuploader-element-invisible {
+	position: absolute !important;
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px,1px,1px,1px);
+}
+.webuploader-pick {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	background: #999;
+	padding:  0 4px;
+	line-height: 24px;
+	color: #fff;
+	text-align: center;
+	border-radius: 3px;
+	overflow: hidden;
+	height: 24px;
+	width: 100%;
+}
+.webuploader-pick-hover {
+	background: #666;
+}
+
+.webuploader-pick-disable {
+	opacity: 0.6;
+	pointer-events:none;
+}
