--- a/src/assets/components/searchSchool/index.less
+++ b/src/assets/components/searchSchool/index.less
@@ -1,7 +1,7 @@
 @color-blue: #61c0e2;
 
 .s-Content{padding:12px 14px;
-	.btn-search{background-color: #1d718f;border:none;padding-left:10px;padding-right: 10px;}
+	.btn-search{background-color: #1d718f;border:none;padding-left:10px;padding-right: 10px;width:41px;}
 	.inputWrap{margin-right: 41px;
 		.form-control{border-radius: 0;}
 	}
