--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -227,4 +227,6 @@ html,body{background-color: @color-body;}
 
 .shareComponents *,.jiathis_style *{box-sizing: content-box;}
 
-
+::-moz-placeholder { /* Firefox 19+ */
+  color: #999;
+}
