--- a/src/pages/evaluateStep2/index.less
+++ b/src/pages/evaluateStep2/index.less
@@ -32,7 +32,7 @@
 .m-select .tagsWrap{margin-top: 24px;}
 
 .s-Content{padding:12px 14px;
-	.btn-search{background-color: #1d718f;border:none;padding-left:10px;padding-right: 10px;}
+	.btn-search{background-color: #1d718f;border:none;padding-left:10px;padding-right: 10px;width:41px;}
 	.inputWrap{margin-right: 41px;
 		.form-control{border-radius: 0;}
 	}
