--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -147,6 +147,8 @@ ul li {list-style-type:none;}
 
 .avatarRow{margin-bottom: 20px;}
 
+.pickerTxt{display: none;}
+
 .webuploader-container {
 	position: relative;
 }
