--- a/src/pages/evaluateStep2/index.less
+++ b/src/pages/evaluateStep2/index.less
@@ -46,6 +46,8 @@
 	.no_transList{color: #333;margin-top: 20px;}
 }
 
+.ie8 .s-Content .schoolLists{height:310px;}
+
 .s-major{
 	padding:14px 12px;
 	.col1{margin-right: 8px;}
