--- a/src/assets/less/mod/footer.less
+++ b/src/assets/less/mod/footer.less
@@ -6,7 +6,7 @@
 	h4{margin-bottom: 12px;}
 	.column{overflow: hidden;padding-bottom: 100px;margin-bottom: -100px;}
 	.col1{width:21.9%;border-right: 1px solid #5c7f8a;}
-	.col2{width:21.9%;padding-left: 18px;border-right: 1px solid #5c7f8a;}
+	.col2{width:21.9%;padding-left: 18px;}
 	.col3{width:27.9%;padding-left: 18px;}
 	.col4{width:27.9%;padding-top:12px;
 		p{margin-top: 14px;}
