--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -230,3 +230,5 @@ html,body{background-color: @color-body;}
 ::-moz-placeholder { /* Firefox 19+ */
   color: #999;
 }
+
+.form-control.placeholder{color:#ccc;}
