--- a/src/pages/evaluateStep2/index.less
+++ b/src/pages/evaluateStep2/index.less
@@ -65,7 +65,7 @@
 	.city label em,.city label input{vertical-align: middle;}
 	.city label em{display: inline-block;margin-left: 4px;max-width: 120px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;}
 
-	.tagList{float: none;margin-bottom: 16px;background-color: #f3f3f3;}
+	.tagList{float: none;margin-bottom: 16px;margin-right:0;min-width:90px;max-width:140px;width:auto;background-color: #f3f3f3;line-height: 20px;padding:8px 0 8px 8px;text-align: left;}
 }
 
 .m-select{
