--- a/src/assets/templates/applyInfo.ejs
+++ b/src/assets/templates/applyInfo.ejs
@@ -16,7 +16,7 @@
 <div class="row clearfix">
   <label for="courseType" class="control-label column col1 fl">
     <i class="icon-location icon-book"></i>
-    <em class="vm">高考科目：</em></label>
+    <em class="vm">高考科类：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap">
       <% if (courseType == 0) { %>
