--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -55,12 +55,19 @@
 		.link{color:#333;
 			&:hover{color: #666;}
 		}
-		& >.fl{margin-right: 8px;display: inline-block;width: 74px;height: 74px;}
-		.media-body{line-height: 24px;
-			.txt{height: 48px;}
-			a:hover .txt{color: #666;}
+		& >.fl{margin-right: 6px;display: inline-block;width: 74px;height: 37px;
+			img.responsive{width:100%;height: 100%;}
 		}
-		.detail{margin-top: 4px;}
+		.media-body{line-height: 24px;
+			.txt{font-size: 12px;color: #000;line-height: 1;}
+			.txt:hover{color: #666;}
+		}
+		.detail{margin-top: 8px;
+			.source{padding:0 3px;min-width: 56px;font-size: 12px;line-height: 16px;cursor: default;
+				&:hover{background: transparent;color:@color-blue;}
+			}
+			.moment{font-size: 12px;line-height: 18px;}
+		}
 	}
 }
 
