--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -1,4 +1,5 @@
 .jimu{
+	margin-top: 10px;
 	.col1{width:50%;}
 	.col2{width:49%;}
 }
@@ -9,31 +10,44 @@
 .figbar{position: absolute;bottom:0;left:0;right:0;padding:0 10px;background-color:#999;background:rgba(0,0,0,0.5);font-size: 14px;color:#fff;
 	&:hover{color: #ddd;}
 }
-.infoLink.big{width:500px;height: 360px;}
+.infoLink.big{width:500px;height: 250px;}
 .infoLink.mid{width:490px;height: 180px;}
-.infoLink.sml{width:240px;height: 170px;}
-.big .figbar{height:48px;line-height: 48px;}
+.infoLink.sml{width:240px;height: 120px;margin-bottom: 10px;margin-right: 10px;}
+.big .figbar{height:38px;line-height: 38px;}
 .mid .figbar{height:38px;line-height: 38px;}
-.sml .figbar{height:48px;line-height: 1.2;padding:6px 10px;}
+.sml .figbar{height:38px;line-height: 1.2;padding:6px 10px;}
 .bot{margin-right: -10px;}
 .bot .column{width: 240px;margin-right: 10px;}
 
+.smlLists{margin-right: -10px;margin-bottom: -10px;}
+
 .infoLists{margin-top: 28px;}
-.infoList li{margin-bottom: 20px;border-bottom:1px solid #e2e2e2;padding-bottom: 20px;}
+.infoList li{margin-bottom: 16px;border-bottom:1px solid #e2e2e2;padding-bottom: 16px;}
 .detailCnt{
 	font-size: 14px;color: #999;line-height: 1.5;cursor: pointer;
-	&:hover{color: #666;}
 }
 .infoList{}
 .infoList .media > .fl{
-	margin-right: 14px;display: inline-block;width: 130px;height: 130px;
-	img{max-width: 100%;height: auto;display: inline-block;}
+	margin-right: 10px;display: inline-block;width: 140px;height: 70px;
+	img{width: 100%;height: 100%;display: inline-block;}
 }
-.infoList .detailTitle{font-size: 18px;color: #333;margin-bottom: 12px;
+.infoList .detailTitle{display:block;font-size: 16px;color: #000;margin: 0 80px 12px 0;width:auto;max-width:100%;font-weight: normal;
 	&:hover{color:#666;}
 }
+
+.infoList h3{
+	font-size: 16px;line-height: 20px;font-weight: normal;
+	.infoTag{font-size: 12px;line-height:18px;padding:0 3px;min-width:56px;cursor: default;}
+}
+
 .infoList .btn-negative{padding-top:2px;padding-bottom: 2px;}
-.infoList .detailCnt{margin-top: 24px;}
+.infoList .detailCnt{margin-top: 16px;font-size: 0;
+	a{
+		width:80%;vertical-align:baseline;color:#8c8c8c;font-size: 12px;
+		&:hover{color:#666;}
+	}
+	.moment{vertical-align: baseline;text-align: right;font-size:12px;width:19.5%;display: inline-block;}
+}
 
 .tagsWrap .tagsList{
 	margin-right: -18px;
