--- a/src/pages/info/templates/infoList.ejs
+++ b/src/pages/info/templates/infoList.ejs
@@ -8,18 +8,32 @@
 			<img src="<%= news[i].newsIconUrl %>">
 		</span>
 		<div class="media-body">
-				<a class="detailTitle" href="<%= news[i].newsUrl %>" target="_blank">
-					<%= news[i].newsName %>
-				</a>
-				<div class="clearfix detailSub g6">
+				<h3 class="clearfix">
+					<span class="btn btn-primary infoTag btn-outlined fr">
+						<%= tagType %>
+					</span>
+					<a class="detailTitle ellipsis" href="<%= news[i].newsUrl %>" target="_blank">
+						<%= news[i].newsName %>
+					</a>
+					
+				</h3>
+				
+				<!-- <div class="clearfix detailSub g6">
 					<% for (var k = 0; k < news[i].newsTags.length; k++) { %>
 					<span class="fl article-tag mr10"><%= news[i].newsTags[k] %></span>
 					<% } %>
-				<span class="fr moment"><%= news[i].time %></span>
+				
+				</div> -->
+
+				<div class="detailCnt clearfix">
+					<a href="<%= news[i].newsUrl %>" class="dib" target="_blank">
+						<%= news[i].discription %>
+					</a>
+					<span class="moment"><%= news[i].time %></span>
+					
+
 				</div>
-				<a class="db detailCnt" href="<%= news[i].newsUrl %>" target="_blank">
-					<%= news[i].discription %>
-				</a>
+				
 		</div>
 	</div>
 </li>
