--- a/src/pages/bookStep2/index.less
+++ b/src/pages/bookStep2/index.less
@@ -7,6 +7,8 @@
 .selectContent h4{color:#333;font-size: 16px;font-weight: normal;margin-bottom: 12px;}
 .selectWrap{width:160px;border:1px solid #ccc;cursor: pointer;height: 300px;padding:5px 0;}
 .selectWrap li{color: #333;line-height: 24px;font-size: 14px;padding-left: 10px;height:24px;
+
+	    max-width:144px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;
 	&:hover{background-color: #ededed;}
 }
 
