--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -31,7 +31,7 @@
 	margin-right: 10px;display: inline-block;width: 140px;height: 70px;
 	img{width: 100%;height: 100%;display: inline-block;}
 }
-.infoList .detailTitle{display:block;font-size: 16px;color: #000;margin: 0 80px 12px 0;width:auto;max-width:100%;font-weight: normal;
+.infoList .detailTitle{display:block;font-size: 16px;color: #000;margin: 0 80px 0 0;width:auto;max-width:100%;font-weight: normal;
 	&:hover{color:#666;}
 }
 
