--- a/src/pages/recommendUni/index.less
+++ b/src/pages/recommendUni/index.less
@@ -15,7 +15,7 @@
 	margin-left: 0;margin-right: -12px;
 	li{
 	float:left;margin-right: 12px;margin-bottom:10px;width:190px;height:60px;line-height:58px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
-	a{display: block;width: 140px;text-align: center;margin:0 auto;}
+	a{display: block;padding:0 20px;}
 	img{max-width: 100%;max-height: 100%;vertical-align: top;}
 }
 }
