--- a/src/pages/shareSuccess/index.less
+++ b/src/pages/shareSuccess/index.less
@@ -31,7 +31,7 @@
 	}
 }
 
-.recieve{
+.recieveForm{
 	width: 320px;
 	margin:54px auto 36px;
 	.btn-block{
@@ -41,4 +41,18 @@
 	.error-rows{
 		height: 18px;
 	}
+}
+
+.recommend-texts{
+	width: 456px;
+	font-size: 18px;
+	line-height: 2.2;
+	color: #666;
+}
+
+.recieveTxts{
+	margin-top: 50px;
+	margin-bottom: 100px;
+	font-size: 22px;
+	color: #f87875;
 }
