修改预约提交接口

--- a/src/pages/scoreTransformer/index.less
+++ b/src/pages/scoreTransformer/index.less
@@ -1,7 +1,9 @@
 @color-blue: #61c0e2;
-@color-orange: #f4b64f;
+@color-orange: #f76c86;
 
 .orange{color: @color-orange;}
+.blue{color: @color-blue;}
+
 .icon() {
  	display: inline-block;vertical-align: middle;background-repeat: no-repeat;
 }
@@ -10,29 +12,38 @@
 .formWrap > .col1{width:590px;}
 .formWrap > .col2{width:300px;}
 
-.formWrap{background-color: #fff;padding:32px 24px 36px;margin-bottom: 30px;}
-
-.list-group-item{
-	color:#555;font-size: 15px;line-height: 23px;cursor: default;
-	.body{display: block;margin-right: 23px;}
-	&.cp{cursor: pointer;}
-}
-
-.icon-right{width:13px;height: 23px;background-position: -43px 0;}
-.active .icon-right{width:13px;height: 23px;background-position: -30px 0;}
-
-.faqList{
-	margin-bottom: 24px;
-	h4{color: @color-blue;font-weight: normal;margin-bottom: 20px;font-size: 18px;}
-	.more > a{color: #555;font-size: 15px;
-		&:hover{color: #333;}
+.formWrap{
+	background-color: #fff;
+	padding:32px 24px 36px;
+	margin-bottom: 30px;
+	.btnRow{
+		margin-top: 50px;
 	}
 }
 
-.pre{
-	.list-group-item .fr{margin-right: 36px;}
+.dzWrapper{
+	margin-top: 66px;
+	margin-bottom: 88px;
 }
 
-.history{
-	.list-group-item .fr{margin-top: 12px;}
+.dz{
+	width: 531px;
+	height: 135px;
+	background:url('./image/dz_title.png') no-repeat;
+	position: relative;
+	margin: 0 auto;
+	font-size: 20px;
+	color: #fff;
+	p{
+		padding-top: 80px;
+	}
+}
+
+.dzLists{
+	font-size: 22px;
+	margin-top: 36px;
+	margin-bottom: 36px;
+	li{
+		margin-bottom: 44px;
+	}
 }
