--- a/src/assets/components/beautifySelect/index.less
+++ b/src/assets/components/beautifySelect/index.less
@@ -64,7 +64,8 @@
 }
 
 .beautify-select .options li {
-    padding: 5px 9pt;
+    padding: 5px 12px;
+    line-height: 20px;
     color: #333;
     cursor: pointer;
     white-space: nowrap;
