--- a/src/assets/templates/pay.ejs
+++ b/src/assets/templates/pay.ejs
@@ -1,4 +1,4 @@
-<div class="modalCntWrap taoModal g9 modalForm">
+<div class="modalCntWrap taoModal g9 modalForm payModal">
  <h3 class="clearfix">
   <a href="javascript:;" class="icons btn-close fr"></a>
   <span class="fl">支付</span>
