--- a/src/assets/components/payModal/index.less
+++ b/src/assets/components/payModal/index.less
@@ -1,3 +1,7 @@
+.payModal{
+	overflow: visible;
+}
+
 .couponSelectWrap{
 	width: 200px;
 	margin:24px auto 20px;
@@ -14,4 +18,14 @@
     position: absolute;
     top: 15px;
     right: 9px;
+}
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
