--- a/src/pages/createAppointment/index.less
+++ b/src/pages/createAppointment/index.less
@@ -101,6 +101,10 @@
 		color: #c7c7c7;
 		padding-right: 20px;
 		background:url(./img/arrow.png) right center no-repeat;
+		transition: color 0.4s ease;
+		&:hover{
+			color: #666;
+		}
 	}
 	.label_radio{
 
