--- a/src/pages/infoV2/templates/infoList.ejs
+++ b/src/pages/infoV2/templates/infoList.ejs
@@ -14,7 +14,7 @@
 						<%= news[i].newsTags %>
 					</span>
 					<% } %>
-					<a class="detailTitle ellipsis" href="<%= news[i].newsUrl %>" target="_blank">
+					<a class="detailTitle" href="<%= news[i].newsUrl %>" target="_blank">
 						<%= news[i].newsName %>
 					</a>
 					
@@ -28,12 +28,7 @@
 				</div> -->
 
 				<div class="detailCnt clearfix">
-					<a href="<%= news[i].newsUrl %>" class="dib" target="_blank">
-						<%= news[i].discription %>
-					</a>
 					<span class="moment"><%= news[i].time %></span>
-					
-
 				</div>
 				
 		</div>
