--- a/src/pages/infoV2/index.less
+++ b/src/pages/infoV2/index.less
@@ -30,10 +30,10 @@
 }
 .infoList{}
 .infoList .media > .fl{
-	margin-right: 10px;display: inline-block;width: 140px;height: 70px;
+	margin-right: 10px;display: inline-block;width: 80px;height: 60px;
 	img{width: 100%;height: 100%;display: inline-block;}
 }
-.infoList .detailTitle{display:block;font-size: 16px;color: #000;margin: 0 80px 0 0;width:auto;max-width:100%;font-weight: normal;
+.infoList .detailTitle{display:block;font-size: 16px;color: #000;margin: 0 80px 0 0;width:100%;font-weight: normal;
 	&:hover{color:#666;}
 }
 
@@ -45,10 +45,10 @@
 .infoList .btn-negative{padding-top:2px;padding-bottom: 2px;}
 .infoList .detailCnt{margin-top: 16px;font-size: 0;
 	a{
-		width:80%;vertical-align:baseline;color:#8c8c8c;font-size: 12px;
+		vertical-align:baseline;color:#8c8c8c;font-size: 12px;
 		&:hover{color:#666;}
 	}
-	.moment{vertical-align: baseline;text-align: right;font-size:12px;width:19.5%;display: inline-block;}
+	.moment{vertical-align: baseline;text-align: right;font-size:12px;display: block;}
 }
 
 .tagsWrap .tagsList{
