--- a/src/assets/less/mod/footer.less
+++ b/src/assets/less/mod/footer.less
@@ -1,8 +1,12 @@
 .footerWrap{
-	background-color: #164758;color: #fff;font-size: 14px;padding:20px 0;
+	background-color: #fff;color: #303b52;font-size: 14px;padding:20px 0 36px;
 	.tagLists{margin-right: -20px;}
 	.f-lh{line-height: 34px;}
-	a{color: #fff;display:inline-block;min-width: 6em;margin-right: 20px;}
+	a{color: #303b52;display:inline-block;min-width: 6em;margin-right: 20px;
+		&:hover{
+			color: #303b52;
+		}
+	}
 	h4{margin-bottom: 12px;}
 	.column{overflow: hidden;padding-bottom: 100px;margin-bottom: -100px;}
 	.col1{width:21.9%;border-right: 1px solid #5c7f8a;}
@@ -11,7 +15,6 @@
 	.col4{width:27.9%;padding-top:12px;
 		p{margin-top: 14px;}
 	}
-	.links:hover{color:#ddd;}
 }
 
 .bottomBar{color: #fff;background-color: #1d1d1d;line-height: 38px;text-align: center;}
