--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -11,7 +11,9 @@ html,body{background-color: @color-body;}
 .input.form-control{color:@color-blue;}
 
 .prefix() {content: " "; display: block; width: 0; height: 0;position: absolute;border-top: 20px solid transparent;border-bottom: 20px solid transparent;}
-
+.justify{
+	text-align: justify;
+}
 .container{width:1000px;margin:0 auto;}
 .taoIcon{
 	.lookIcon();background-image: url(../../img/taoIcon.png);
