--- a/src/pages/bookResultV2/index.less
+++ b/src/pages/bookResultV2/index.less
@@ -40,6 +40,7 @@ pre{display: none;}
 			vertical-align: baseline;
 			display: inline-block;
 			margin-left: 12px;
+			font-weight: normal;
 		}
 	}
 	h4{
