--- a/src/pages/evaluateStep2/templates/v2/majorList.ejs
+++ b/src/pages/evaluateStep2/templates/v2/majorList.ejs
@@ -3,9 +3,9 @@
 <% }else{ %>
 	<% for (var i = 0; i < majorList.length; i++) { %>
 	 	<li>
-		 	<label for="major_<%= majorList[i].code %>" >
-		 		<input type="radio" name="city" n="<%= majorList[i].name %>" value="<%= majorList[i].code %>" id="major_<%= majorList[i].code %>" />
-		 		<em><%= majorList[i].name %></em>
+		 	<label for="major_<%= majorList[i].majorId %>" >
+		 		<input type="radio" name="city" n="<%= majorList[i].majorName %>" value="<%= majorList[i].majorId %>" id="major_<%= majorList[i].majorId %>" />
+		 		<em><%= majorList[i].majorName %></em>
 		 	</label>
 		</li>
  <% }} %>
