--- a/src/assets/less/mod/footer.less
+++ b/src/assets/less/mod/footer.less
@@ -1,16 +1,29 @@
 .footerWrap{
 	background-color: #fff;color: #303b52;font-size: 14px;padding:20px 0 36px;
-	.tagLists{margin-right: -20px;}
 	.f-lh{line-height: 34px;}
-	a{color: #303b52;display:inline-block;min-width: 6em;margin-right: 20px;
+	a{color: #303b52;display:inline-block;min-width: 6em;
 		&:hover{
 			color: #303b52;
 		}
 	}
 	h4{margin-bottom: 12px;}
 	.column{overflow: hidden;padding-bottom: 100px;margin-bottom: -100px;}
-	.col1{width:21.9%;border-right: 1px solid #5c7f8a;}
-	.col2{width:21.9%;padding-left: 18px;}
+	.col1{width:24%;border-right: 1px solid #5c7f8a;padding-right: 20px;
+		.fTag-col1{
+			width: 6em;margin-right: 20px;
+		}
+		.fTag-col2{
+			width: 8em;
+		}
+	}
+	.col2{width:24%;padding-left: 18px;
+		.fTag-col1{
+			width: 6em;margin-right: 20px;
+		}
+		.fTag-col2{
+			width: 8em;
+		}
+	}
 	.col3{width:27.9%;padding-left: 18px;}
 	.col4{width:27.9%;padding-top:12px;
 		p{margin-top: 14px;}
