--- a/src/pages/homeV2/index.less
+++ b/src/pages/homeV2/index.less
@@ -10,7 +10,7 @@
 .bannerShow {position: relative;overflow: hidden}
 .bannerShow ul {height: 100%;position: relative}
 .bannerShow ul li {float: left}
-.picSlide a {background-position: center center;background-repeat: no-repeat;display: block;height: 460px;}
+.picSlide a {background-position: center center;background-repeat: no-repeat;display: block;height: 360px;}
 .picSlide a>img {width: 100%;height: auto;}
 .bannerShow .dots {position: absolute;bottom: 20px;z-index: 99}
 .bannerShow .dots a {display: block;float: left;width: 48px;font:0/0 a;height: 8px;margin: 0 12px;border-radius: 4px;cursor: pointer;background-color: #2c7fbc;transition:all 0.4s ease;}
@@ -262,7 +262,7 @@
 	}
 }
 
-.s-banner,.s-feature{
+.s-feature{
 	margin-top: 40px;
 }
 
